--- a/fontend/src/app/admin/sub-category/sub-category.component.html
+++ b/fontend/src/app/admin/sub-category/sub-category.component.html
@@ -4,7 +4,7 @@
       <span class="fs-5">Danh Mục Phụ</span>
     </p>
   </header>
-<form  [formGroup]="subCategoryForm!">
+
 <div class="mb-9">
   <div class="row">
     <div class="col-md-2">
@@ -32,11 +32,11 @@
   <div class="row mt-3">
     <div class="col-md-2"></div>
     <div class="col-md-3">
-      <button (click)="addSubCategory()" class="btn btn-success" [disabled]="!subCategoryForm.valid">Thêm Danh Mục Phụ</button>
+      <button (click)="addSubCategory()" class="btn btn-success" >Thêm Danh Mục Phụ</button>
     </div>
   </div>
 </div>
-</form>
+
 
 
 
