--- a/fontend/src/app/user/user.component.html
+++ b/fontend/src/app/user/user.component.html
@@ -1,1 +1,166 @@
-<p>user works!</p>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
+  <div style="margin-left: 180px;">
+    <a class="navbar-brand" href="#"><img src="https://bizweb.dktcdn.net/100/485/241/themes/911577/assets/logo.png?1700209535143" height="60" class="mr-2" /></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation" (click)="isCollapsed = !isCollapsed">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  </div>
+  <div class="collapse navbar-collapse" id="navbarColor03" [ngbCollapse]="isCollapsed">
+    <div class="col-lg-8 col-2">
+      <ul class="navbar-nav mr-auto justify-content-center">
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [style.color]="isActive('/user') ? '#CC7F45' : 'inherit'" routerLink="/">TRANG CHỦ <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [style.color]="isActive('/user/gioithieu') ? '#CC7F45' : 'inherit'" routerLink="gioithieu">GIỚI THIỆU</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle " href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="padding-bottom:20px;">
+            SẢN PHẨM
+          </a>
+            <ul class="dropdown-menu custom-dropdown dropdown-menu-lg-start " aria-labelledby="navbarDarkDropdownMenuLink">
+              <div style="margin-left: 20px;">
+                <div class="row">
+                  <div class="col-lg-8 col-12 ">
+                    <div class="row">
+                      <div *ngFor="let mainCategory of mainCategories" class="col-md-4 mt-4 mb-4">
+                        <a class="h6 text-decoration-none" style="color:#CC7F45;">{{ mainCategory.mainCategoryName }}</a>
+                        <ul class="list-unstyled">
+                          <li *ngFor="let subCategory of mainCategory.subCategories">
+                            <a>{{ subCategory.subCategoryName }}</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                </div>
+                  <div class="col-lg-4 col-12">
+                    <img src="https://bizweb.dktcdn.net/100/485/241/themes/911577/assets/megamenu_banner.png?1700209535143" class="img-fluid">
+                  </div>
+                </div>
+              </div>
+            </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">TIN TỨC</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">CỬA HÀNG</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [style.color]="isActive('/user/lienhe') ? '#CC7F45' : 'inherit'" routerLink="lienhe">LIÊN HỆ</a>
+        </li>
+      </ul>
+    </div>
+
+    <form class="form-inline my-2 my-lg-0">
+      <i><a class="pi pi-search text-decoration-none" herf="#"></a></i>
+      <i><a class="pi pi-user text-decoration-none"></a></i>
+      <i><a class="pi pi-heart text-decoration-none"></a></i>
+      <i><a class="pi pi-shopping-bag text-decoration-none"></a></i>
+    </form>
+  </div>
+</nav>
+
+
+<router-outlet></router-outlet>
+
+
+
+
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-lg-4 ft-info"style="color:aliceblue"> 
+        <h4 class="title-menu" style="color:aliceblue" > 
+          Thông tin
+        </h4>
+        <div class="group-address">
+          <ul>
+            <li>
+              <i class="pi pi-map-marker" style="margin-right: 10px;">
+                <span style="color:aliceblue">
+                70 Lữ Gia, Phường 15, Quận 11, TP. HCM
+                </span>
+              </i>
+            </li>
+            <li>  
+              <i class="pi pi-phone" style="margin-right: 100px;"> 
+                <a title="1900 6750" href="tel:19006750">1900 6750</a>
+              </i>
+            </li>
+            <li>    
+              <i class="pi pi-envelope">
+                <a title="support@sapo.vn" href="mailto:support@sapo.vn">supportsapo.vn</a>
+              </i>   
+            </li>
+          </ul>
+        </div>	
+        <h4 class="title-menu" style="color:aliceblue">
+          Mạng xã hội
+        </h4>
+        <ul class="social d-flex" style="margin-bottom: 20px;">
+          <li class="mr-3"><a href="#" title="Zalo"><img width="32" height="32" title="Zalo" class="lazyload loaded" src="//bizweb.dktcdn.net/100/485/241/themes/911577/assets/zalo.png?1700209535143" data-src="//bizweb.dktcdn.net/100/485/241/themes/911577/assets/zalo.png?1700209535143" data-was-processed="true"></a></li>
+          <li class="mr-3"><a href="#" title="Facebook"><img width="32" height="32" title="Facebook" class="lazyload loaded" src="//bizweb.dktcdn.net/100/485/241/themes/911577/assets/facebook.png?1700209535143" data-src="//bizweb.dktcdn.net/100/485/241/themes/911577/assets/facebook.png?1700209535143" data-was-processed="true"></a></li>
+          <li class="mr-3"><a href="#" title="Youtube"><img width="32" height="32" title="Youtube" class="lazyload loaded" src="//bizweb.dktcdn.net/100/485/241/themes/911577/assets/youtube.png?1700209535143" data-src="//bizweb.dktcdn.net/100/485/241/themes/911577/assets/youtube.png?1700209535143" data-was-processed="true"></a></li>
+          <li><a href="#" title="Google"><img width="32" height="32" title="Google" class="lazyload loaded" src="//bizweb.dktcdn.net/100/485/241/themes/911577/assets/google.png?1700209535143" data-src="//bizweb.dktcdn.net/100/485/241/themes/911577/assets/google.png?1700209535143" data-was-processed="true"></a></li>
+        </ul>
+      </div>
+      <div class="col-12 col-lg-5 ft-menu"> 
+        <div class="row">
+          <div class="col-12 col-sm-6 link-list col-footer footer-click" style="color:aliceblue">
+            <h4 class="title-menu title-menu2" style="color:aliceblue">
+              Chính sách
+            </h4>
+            <ul class="list-menu hidden-mobile">
+              <li><a href="/chinh-sach-bao-mat" title="Chính sách bảo mật">Chính sách bảo mật</a></li>        
+              <li><a href="/chinh-sach-van-chuyen" title="Chính sách vận chuyển">Chính sách vận chuyển</a></li>
+              <li><a href="/chinh-sach-doi-tra" title="Chính sách đổi trả">Chính sách đổi trả</a></li>         
+              <li><a href="/quy-dinh-su-dung" title="Quy định sử dụng">Quy định sử dụng</a></li>         
+            </ul>
+          </div>
+          <div class="col-12 col-sm-6 link-list col-footer footer-click">
+            <h4 class="title-menu title-menu2" style="color:aliceblue">
+              Hướng dẫn
+            </h4>
+            <ul class="list-menu hidden-mobile" style="color:aliceblue">         
+              <li><a href="/huong-dan-mua-hang" title="Hướng dẫn mua hàng">Hướng dẫn mua hàng</a></li>         
+              <li><a href="/huong-dan-thanh-toan" title="Hướng dẫn thanh toán">Hướng dẫn thanh toán</a></li>         
+              <li><a href="/huong-dan-giao-nhan" title="Hướng dẫn giao nhận">Hướng dẫn giao nhận</a></li>
+              <li><a href="/dieu-khoan-dich-vu" title="Điều khoản dịch vụ">Điều khoản dịch vụ</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-lg-3"> 
+        <h4 class="title-menu" style="color:aliceblue">
+          Đăng ký nhận tin
+        </h4>
+        <span class="content-mailchimp" style="color:aliceblue">Đăng ký ngay! Để nhận thật nhiều ưu đãi</span>
+        <!-- <form id="mc-form" class="newsletter-form" data-toggle="validator" novalidate="true">
+          <input aria-label="Địa chỉ Email" type="email" class="form-control" placeholder="Nhập địa chỉ email" name="EMAIL" required="" autocomplete="off">
+          <button class="btn btn-default" type="submit" aria-label="Đăng ký nhận tin" name="subscribe">ĐĂNG KÝ</button>
+        </form> -->
+    
+        <div class="p-inputgroup" style="border-radius: 50%;">
+          <input type="text" pInputText placeholder="Nhập địa chỉ email" />
+          <button type="button" pButton style="background:#D58C36; color:aliceblue;">ĐĂNG KÝ</button>
+      </div>
+    
+        <div class="mailchimp-alerts ">
+          <div class="mailchimp-submitting"></div><!-- mailchimp-submitting end -->
+          <div class="mailchimp-success"></div><!-- mailchimp-success end -->
+          <div class="mailchimp-error"></div><!-- mailchimp-error end -->
+        </div>
+        <h4 class="title-menu" style="color:aliceblue">
+          Hình thức thanh toán
+        </h4>
+        <ul class="thanhtoan">
+          <li><img width="57" height="35" alt="Payment 1" data-src="//bizweb.dktcdn.net/100/485/241/themes/911577/assets/payment_1.png?1700209535143" class="lazyload loaded" src="//bizweb.dktcdn.net/100/485/241/themes/911577/assets/payment_1.png?1700209535143" data-was-processed="true"></li>
+          <li><img width="57" height="35" alt="Payment 2" data-src="//bizweb.dktcdn.net/100/485/241/themes/911577/assets/payment_2.png?1700209535143" class="lazyload loaded" src="//bizweb.dktcdn.net/100/485/241/themes/911577/assets/payment_2.png?1700209535143" data-was-processed="true"></li>
+          <li><img width="57" height="35" alt="Payment 3" data-src="//bizweb.dktcdn.net/100/485/241/themes/911577/assets/payment_3.png?1700209535143" class="lazyload loaded" src="//bizweb.dktcdn.net/100/485/241/themes/911577/assets/payment_3.png?1700209535143" data-was-processed="true"></li>
+        </ul>       
+      </div>
+    </div>
+  </div>
+</footer>
