--- a/fontend/src/app/app.component.html
+++ b/fontend/src/app/app.component.html
@@ -1,3 +1,6 @@
 
   <router-outlet></router-outlet>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Allura' rel='stylesheet'>
