--- a/fontend/src/app/user/gioithieu/gioithieu.component.html
+++ b/fontend/src/app/user/gioithieu/gioithieu.component.html
@@ -1,18 +1,43 @@
-
-<div class="gioithieu container">
-    <p class="font-weight-bold">Giới thiệu</p>
-    <p>Ngành hàng gốm sứ là một trong những ngành hàng truyền thống của Việt Nam, có lịch sử phát triển lâu đời và chiếm vị trí quan trọng trong nền kinh tế và văn hóa của đất nước. Những sản phẩm gốm sứ được tạo ra từ các loại đất sét và được sục khí nung để tạo nên các sản phẩm làm đẹp cho người sử dụng.</p>
-    <p>Trong ngành hàng gốm sứ, nghệ thuật sản xuất và sáng tác tiềm ẩn nhiều giá trị văn hóa. Những cốc chén, bình hoa, đồ trang trí trong gia đình đều khắc họa nét đẹp của văn hóa Việt Nam. Không chỉ được sử dụng trong đời sống thường ngày, những sản phẩm gốm sứ còn được sử dụng trong lễ hội, lịch sử dân tộc và nghi lễ tôn giáo.</p>
-    <p>
-        Thị trường ngành hàng gốm sứ không chỉ ở Việt Nam mà còn lan rộng ra tới các quốc gia khác trên thế giới. Nó đang được ưa chuộng do đặc tính thân thiện với môi trường và tính thẩm mỹ cao. Sự phát triển của sản phẩm gốm sứ cũng giúp nâng cao sản xuất công nghiệp Việt Nam và là nguồn thu nhập quan trọng cho người lao động, đóng góp tích cực cho nền kinh tế đất nước.
-    </p>
-    <p>
-        Nghề gốm sứ còn mang trong mình những giá trị tinh thần, với hơn 70% lao động thuộc địa phương, đa số là những người có tài năng và niềm đam mê với nghệ thuật. Họ đã vượt qua những khó khăn để giữ gìn và truyền lại cho thế hệ sau những giá trị vỏn vẹn của nghề gốm sứ. Từ đó, nghề gốm sứ không chỉ là món đồ sử dụng như mọi người nghĩ, mà còn là một tinh hoa văn hóa và là niềm tự hào của dân tộc.
-    </p>
-    <p>
-        Để góp phần duy trì và phát triển ngành hàng gốm sứ, các doanh nghiệp phải chú trọng đầu tư công nghệ sản xuất tiên tiến và quản lý chất lượng sản phẩm tốt hơn. Tuy nhiên, để phổ biến sản phẩm cho khách hàng, họ cần đào tạo và tạo ra nhiều mẫu mã đa dạng hơn, phù hợp với nhu cầu thị trường và văn hóa địa phương.
-    </p>
-    <p>
-        Tổng kết lại, ngành hàng gốm sứ là ngành hàng truyền thống quan trọng của Việt Nam, đóng góp to lớn cho nền kinh tế và văn hóa của đất nước. Nó mang trong mình những giá trị tinh thần, và còn là niềm tự hào của người Việt. Để phát triển ngành này, chúng ta cần kết hợp các giá trị văn hóa với công nghệ sản xuất tiên tiến, giúp đáp ứng nhu cầu của khách hàng và bảo vệ môi trường.
-    </p>
+<div class="header">
+    <div class="container" style="padding-top: 50px; text-align: center;">
+        <nav aria-label="breadcrumb" style="display: inline-block;">
+            <h2 style=" color: #CC7F45;">Giới Thiệu</h2>
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="#">Trang chủ</a></li>
+              <li class="breadcrumb-item" style=" color: #CC7F45;" >Giới Thiệu</li>
+            </ol>
+        </nav>
+        
+        <p-carousel [value]="subCategories" [numVisible]="4" [numScroll]="1" [responsiveOptions]="responsiveOptions">
+            <ng-template let-subCategories pTemplate="item">
+                <a class="m-2 text-center py-3 px-5 category-item">
+                    <div class="mb-1 custom-img">
+                        <img class="" [src]="subCategories.imageUrl" [alt]="subCategories.title">
+                    </div>
+                    <div>
+                        <p class="mb-1 mt-3">{{ subCategories.title }}</p>
+                    </div>
+                </a>
+            </ng-template>
+        </p-carousel>
+    </div>
+</div>
+<div class="gioithieu mt-3">
+    <div class="container">
+        <p class="font-weight-bold">Giới thiệu</p>
+        <p>Ngành hàng gốm sứ là một trong những ngành hàng truyền thống của Việt Nam, có lịch sử phát triển lâu đời và chiếm vị trí quan trọng trong nền kinh tế và văn hóa của đất nước. Những sản phẩm gốm sứ được tạo ra từ các loại đất sét và được sục khí nung để tạo nên các sản phẩm làm đẹp cho người sử dụng.</p>
+        <p>Trong ngành hàng gốm sứ, nghệ thuật sản xuất và sáng tác tiềm ẩn nhiều giá trị văn hóa. Những cốc chén, bình hoa, đồ trang trí trong gia đình đều khắc họa nét đẹp của văn hóa Việt Nam. Không chỉ được sử dụng trong đời sống thường ngày, những sản phẩm gốm sứ còn được sử dụng trong lễ hội, lịch sử dân tộc và nghi lễ tôn giáo.</p>
+        <p>
+            Thị trường ngành hàng gốm sứ không chỉ ở Việt Nam mà còn lan rộng ra tới các quốc gia khác trên thế giới. Nó đang được ưa chuộng do đặc tính thân thiện với môi trường và tính thẩm mỹ cao. Sự phát triển của sản phẩm gốm sứ cũng giúp nâng cao sản xuất công nghiệp Việt Nam và là nguồn thu nhập quan trọng cho người lao động, đóng góp tích cực cho nền kinh tế đất nước.
+        </p>
+        <p>
+            Nghề gốm sứ còn mang trong mình những giá trị tinh thần, với hơn 70% lao động thuộc địa phương, đa số là những người có tài năng và niềm đam mê với nghệ thuật. Họ đã vượt qua những khó khăn để giữ gìn và truyền lại cho thế hệ sau những giá trị vỏn vẹn của nghề gốm sứ. Từ đó, nghề gốm sứ không chỉ là món đồ sử dụng như mọi người nghĩ, mà còn là một tinh hoa văn hóa và là niềm tự hào của dân tộc.
+        </p>
+        <p>
+            Để góp phần duy trì và phát triển ngành hàng gốm sứ, các doanh nghiệp phải chú trọng đầu tư công nghệ sản xuất tiên tiến và quản lý chất lượng sản phẩm tốt hơn. Tuy nhiên, để phổ biến sản phẩm cho khách hàng, họ cần đào tạo và tạo ra nhiều mẫu mã đa dạng hơn, phù hợp với nhu cầu thị trường và văn hóa địa phương.
+        </p>
+        <p>
+            Tổng kết lại, ngành hàng gốm sứ là ngành hàng truyền thống quan trọng của Việt Nam, đóng góp to lớn cho nền kinh tế và văn hóa của đất nước. Nó mang trong mình những giá trị tinh thần, và còn là niềm tự hào của người Việt. Để phát triển ngành này, chúng ta cần kết hợp các giá trị văn hóa với công nghệ sản xuất tiên tiến, giúp đáp ứng nhu cầu của khách hàng và bảo vệ môi trường.
+        </p>
+    </div>
 </div>
