--- a/fontend/src/styles.css
+++ b/fontend/src/styles.css
@@ -3,3 +3,4 @@
 @import "primeng/resources/primeng.css";
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import "primeicons/primeicons.css";
+@import "~bootstrap/dist/css/bootstrap.css";
