--- a/fontend/src/app/admin/admin.component.html
+++ b/fontend/src/app/admin/admin.component.html
@@ -18,6 +18,9 @@
         Danh mục phụ
       </a>
       <hr class="text-white">
+      <a class="nav-link text-white text-center" [ngClass]="{' bg-danger': isActive('/admin/tintuc')}" routerLink="/admin/tintuc">
+        Tin Tức
+      </a>
     </div>  
     <hr class="text-white">
   </div>
