--- a/fontend/src/app/admin/tintuc/tintuc-add/tintuc-add/tintuc-add.component.html
+++ b/fontend/src/app/admin/tintuc/tintuc-add/tintuc-add/tintuc-add.component.html
@@ -3,7 +3,7 @@
     <form [formGroup]="form" (submit)="addNews()" enctype="multipart/form-data">
       <div class="form-group">
         <label for="title">Tiêu đề:</label>
-        <input type="text" class="form-control" id="title"  required>
+        <input type="text" class="form-control" id="title" formControlName="title" required>
       </div>
       <div class="row mb-3">
         <label for="productImage" class="form-label col-sm-2" style="width: 140px;">Ảnh Sản Phẩm:</label>
@@ -30,11 +30,15 @@
 
       <div class="form-group">
         <label for="publishedAt">Ngày đăng:</label>
-        <input type="date" class="form-control" id="publishedAt" required>
+        <input type="date" class="form-control" id="publishedAt" formControlName="publishedAt" required>
       </div>
       <div class="form-group">
         <label for="content">Nội dung:</label>
-        <textarea class="form-control" id="content" rows="4" required></textarea>
+        <textarea class="form-control" id="content" rows="4" formControlName="content" required></textarea>
+      </div>
+      <div class="form-group">
+        <label for="author">Tác giả:</label>
+        <textarea class="form-control" id="author" formControlName="author" required></textarea>
       </div>
       <button type="submit" class="btn btn-primary">Thêm tin tức</button>
     </form>
