--- a/fontend/src/app/user/home/home.component.html
+++ b/fontend/src/app/user/home/home.component.html
@@ -1,3 +1,5 @@
+
+<p-toast></p-toast>
 <div class="mb-5">
   <p-carousel [value]="slider" [numVisible]="1" [numScroll]="1" [circular]="true" [responsiveOptions]="responsiveOptions" [autoplayInterval]="3000">
     <ng-template let-slider pTemplate="item">
