--- a/fontend/src/app/user/tintuc/tintuc.component.html
+++ b/fontend/src/app/user/tintuc/tintuc.component.html
@@ -15,8 +15,10 @@
           <div class="col-12 col-sm-6 col-lg-3 p-2" *ngFor="let news of newsList; let i = index">
             <div class="p-4 surface-card border-round align-items-start">
               <div class="d-flex flex-column">
-                <img style="width: 300px; height: 250px; object-fit: cover;" class="shadow border-round" [src]="news.img" [alt]="news.title" />
+                <a [routerLink]="['/user/tintuc', news._id]">
+                <img style="width: 300px; height: 250px; object-fit: cover;" class="shadow border-round" [src]="'http://localhost:3000' + news.newsImage" [alt]="news.title" />
                 <div class="font-weight-bold mt-3 product_name" style="height: 60px;">{{ news.title }}</div>
+                </a>
               </div>
               <div class="d-flex justify-content-between align-items-center">
                 <span class="font-weight-bold">{{ news.publishedAt | date:'dd/MM/yyyy' }}</span>
