--- a/fontend/src/app/admin/tintuc/tintuc.component.html
+++ b/fontend/src/app/admin/tintuc/tintuc.component.html
@@ -1,8 +1,12 @@
-Thêm phần này vào template
+
 <div class='card'>
     <!-- user.component.html -->
-    <button class="btn btn-primary" [routerLink]="['/admin/tintuc/add-news']">Thêm tin tức mới</button>
-
+    <div class="card-header">
+    <div class="d-flex justify-content-between align-items-center">
+      <span>{{pageTitle}}</span>
+      <button class="btn btn-primary" [routerLink]="['/admin/tintuc/add-news']">Thêm mới tin tức</button>
+    </div>
+  </div>
     <div class='table-responsive text-center'>
       <table class='table' *ngIf='newsList.length'>
         <thead>
@@ -15,7 +19,7 @@ Thêm phần này vào template
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor='let news of newsList'>
+          <tr *ngFor='let news of newsList; let i = index'>
             <td>
               <img
                 *ngIf="news.img"
@@ -25,7 +29,14 @@ Thêm phần này vào template
               />
             </td>
             <td>{{ news.title }}</td>
-            <td>{{ news.content }}</td>
+            <td>
+              <p-button (click)="showDialog(i)" label="Mô tả" styleClass="p-button-warning"></p-button>
+              <p-dialog header="Header" [(visible)]="dialogVisibilities[i]" [style]="{ width: '50vw' }">
+                  <p>
+                  {{ news.content }}
+                  </p>
+              </p-dialog> 
+           </td>
             <td>{{ news.author }}</td>
             <td>{{ news.publishedAt | date: 'dd/MM/yyyy' }}</td>
           </tr>
